OaiService, datestamp saved per cluster
